--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "gulp-babel": "^4.0.0",
     "gulp-changed": "^1.1.1",
     "gulp-cli": "^0.1.5",
+    "gulp-coveralls": "^0.1.3",
+    "gulp-istanbul": "^0.6.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
+    "isparta": "^2.2.0",
     "run-sequence": "^1.0.2"
   },
   "homepage": "https://github.com/atsid/express-jefferson",
