--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Declarative Application Routing",
   "main": "index.js",
   "scripts": {
-    "test": "gulp"
+    "test": "gulp ci-build"
   },
   "repository": {
     "type": "git",
