--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
     "isparta": "^2.2.0",
-    "run-sequence": "^1.0.2"
+    "run-sequence": "^1.0.2",
+    "supertest": "^0.15.0"
   },
   "homepage": "https://github.com/atsid/express-jefferson",
   "dependencies": {
