* updating the promise-handler filename to use hyphen-casing instead of snake_casing to match the library idioms. * Updating the npmignore so that coverage isn't published * Updating the output of the library code so that require('') on sub-paths will behave normally

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "express-jefferson",
   "version": "1.0.0",
   "description": "Declarative Application Routing",
-  "main": "./lib/index.js",
-  "directories": {
-    "lib": "./lib"
-  },
+  "main": "jefferson.js",
   "scripts": {
     "test": "gulp ci-build"
   },
