#14 - Adding the middleware index as an argument to the proxies

--- a/.jscrc
+++ b/.jscrc
@@ -1,4 +1,5 @@
 {
-    "preset": "crockford",
-    "esnext": true
+    "esnext": true,
+    "esprima": "./node_modules/esprima-fb",
+    "fileExtensions": [".js"]
 }
