--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "express": "^4.12.2",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
+    "gulp-bump": "^0.3.0",
     "gulp-changed": "^1.1.1",
     "gulp-cli": "^0.1.5",
     "gulp-coveralls": "^0.1.3",
+    "gulp-filter": "^2.0.2",
+    "gulp-git": "^1.1.0",
     "gulp-istanbul": "^0.6.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
+    "gulp-tag-version": "^1.2.1",
     "isparta": "^2.2.0",
     "run-sequence": "^1.0.2",
     "supertest": "^0.15.0"
