--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
+    "gulp-semver-tasks": "^0.1.0",
     "gulp-tag-version": "^1.2.1",
     "isparta": "^2.2.0",
     "run-sequence": "^1.0.2",
