--- a/package.json
+++ b/package.json
@@ -28,18 +28,16 @@
     "chai": "^2.1.1",
     "codeclimate-test-reporter": "0.0.4",
     "del": "^1.1.1",
-    "esprima-fb": "^13001.1001.0-dev-harmony-fb",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
     "gulp-bump": "^0.3.0",
     "gulp-changed": "^1.1.1",
     "gulp-cli": "^0.1.5",
+    "gulp-eslint": "^0.7.0",
     "gulp-filter": "^2.0.2",
     "gulp-git": "^1.1.0",
     "gulp-istanbul": "^0.6.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
     "gulp-semver-tasks": "^0.1.0",
     "gulp-tag-version": "^1.2.1",
