#40 - Update eslint Rules Using the eslint ruleset we've been using on recent projects, based on the AirBnb rule set. Updating application dependencies. Updating the aliasing mechanism so that nested aliases are processed.
Fixes #40
Fixes #41
Fixes #35

--- a/package.json
+++ b/package.json
@@ -24,26 +24,27 @@
     "url": "https://github.com/atsid/express-jefferson/issues"
   },
   "devDependencies": {
-    "babel": "^4.7.1",
-    "chai": "^2.1.1",
-    "codeclimate-test-reporter": "0.0.4",
+    "babel": "^5.8.19",
+    "babel-eslint": "^4.0.5",
+    "chai": "^3.2.0",
+    "codeclimate-test-reporter": "0.1.0",
     "del": "^1.1.1",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
-    "gulp-babel": "^4.0.0",
+    "gulp-babel": "^5.2.0",
     "gulp-bump": "^0.3.0",
     "gulp-changed": "^1.1.1",
-    "gulp-cli": "^0.1.5",
-    "gulp-eslint": "^0.7.0",
-    "gulp-filter": "^2.0.2",
+    "gulp-cli": "^0.3.0",
+    "gulp-eslint": "^0.15.0",
+    "gulp-filter": "^3.0.0",
     "gulp-git": "^1.1.0",
-    "gulp-istanbul": "^0.6.0",
+    "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.0.0",
     "gulp-semver-tasks": "^0.1.0",
     "gulp-tag-version": "^1.2.1",
-    "isparta": "^2.2.0",
+    "isparta": "^3.0.3",
     "run-sequence": "^1.0.2",
-    "supertest": "^0.15.0"
+    "supertest": "^1.0.1"
   },
   "homepage": "https://github.com/atsid/express-jefferson",
   "dependencies": {
