--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "jefferson.js",
   "scripts": {
     "test": "gulp ci-build",
-    "report-coverage": "codeclimate-test-reporter < coverage/lcov.info",
+    "report-coverage": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
